# msgrs

./: Cargo.toml  Settings.toml
client/: Cargo.toml
server/: Cargo.toml
server/src/: chat.rs  lib.rs  main.rs  settings.rs
server/src/chat/: message.rs  session.rs
