[package]
name = "server"
version = "0.1.0"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
config = "0.13.3"
serde = "1.0.176"
serde_json = "1.0.104"
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
